update user management all function and ui part